Fix skills icon SVG work now on mobile

--- a/src/app/shared/side-navbar/side-navbar.component.css
+++ b/src/app/shared/side-navbar/side-navbar.component.css
@@ -336,6 +336,6 @@ body {
 }
 
 .swordIcon {
-  background: url(../../../assets/icons/sword.svg) no-repeat top left;
   background-size: contain;
+  width: 100%;
 }
